fixed namespacing issue, allowed for more characters in other field.

--- a/css/rtec-admin-styles.css
+++ b/css/rtec-admin-styles.css
@@ -1,7 +1,7 @@
 .rtec-wrapper {
     box-sizing: border-box;
 }
-.clear:after {
+.rtec-clear:after {
     display: table;
     clear: both;
     content: " ";
